Add new api method to get disks with their states
